--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,12 @@
 :root {
-  --primary-color: #312f64;
-  --secondary-color: #7cafc5;
+  --primary-color: #3baea0;
+  --primary-font: 'Poppins', sans-serif;
+
+  --secondary-color: #767a88;
+  --text-color: #0f0f0f;
+
   --btn-pad: 20px 30px;
-  --btn-color: #ffc93c;
+  --btn-color: #3baea0;
   --btn-border: 2px solid #312f64;
   --btn-bor-rad: 5px;
 }
@@ -12,58 +16,73 @@
   margin: 0 auto;
   text-align: center;
   padding: 50px;
-  font-family: "Poppins", sans-serif;
-  font-size: 40px;
 }
 
 h1 {
   color: var(--primary-color);
-  font-size: 40px;
-  margin-bottom: 2px;
+  font-size: 70px;
+  margin: 0 auto;
   padding: 2px;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--primary-font);
 }
 
 h2 {
-  color: var(--primary-color);
-  font-size: 75px;
-  text-shadow: 6px 4px 8px rgba(240, 215, 140, 0.7);
-  margin: 20px;
-  padding: 2px;
-  font-family: "Poppins", sans-serif;
-}
-
-h3 {
   color: var(--secondary-color);
-  margin-top: -22px;
-  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  margin: 10px;
+  padding: 2px;
+  font-family: var(--primary-font);
+}
+.about-me{
+  margin: 100px;
 }
 
-.navigation {
-  margin: 60px;
+h3,
+h4 {
+  color: var(--primary-color);
+  font-size: 35px;
+  margin: 10px;
+  padding: 2px;
+  font-family: var(--primary-font);
 }
-a {
-  text-decoration: none;
-  font-family: "Poppins", sans-serif;
+.story{
+  text-align: justify;
+  line-height: 27px;
+  font-family: var(--primary-font);
+  color: var(--text-color)
+}
+ .my-photo{
+  border-radius: 150px;
+  margin-left: 50px;
+ }
+ .details {
+  text-align: justify;
+  line-height: 45px;
+  font-family: var(--primary-font);
+  color: var(--text-color);
+  margin-left: 100px;
+ }
+.navigation {
+  padding: 30px;
 }
 .contact {
   margin-left: 20px;
   padding: var(--btn-pad);
   background-color: var(--btn-color);
-  color: var(--primary-color);
+  color: var(--text-color);
   font-size: 20px;
-  border: var(--btn-border);
+  
   border-radius: var(--btn-bor-rad);
 }
-.about {
-  margin-right: 20px;
-  padding: var(--btn-pad);
-  background-color: var(--btn-color);
-  color: var(--primary-color);
-  border: var(--btn-border);
-  border-radius: var(--btn-bor-rad);
-  font-size: 20px;
+
+
+
+a {
+  text-decoration: none;
+  font0-family: "Poppins", sans-serif;
 }
+
+
 .projects-p {
   font-size: 18px;
   line-height: 1.5;
@@ -72,7 +91,7 @@ a {
   margin-left: 28px;
   text-align: justify;
 }
-h4,
+
 h5,
 h6 {
   font-size: 48px;
