--- a/styles/about.css
+++ b/styles/about.css
@@ -7,7 +7,7 @@
 
   --btn-pad: 20px 30px;
   --btn-color: #3baea0;
-  --btn-bor-rad: 5px;
+  
 }
 
 .main-container {
@@ -17,43 +17,56 @@
   padding: 50px;
 }
 
-h1
- {
-  color: var(--primary-color);
-  font-size: 70px;
-  margin: 0 auto;
-  padding: 2px;
-  font-family: var(--primary-font);
+h1{
+position: absolute;
+width: 500px;
+height: 170px;
+left: calc(50% - 500px/2 - 330px);
+top: 150px;
+font-family:var(--primary-font);
+font-style: normal;
+font-weight: 700;
+font-size: 64px;
+line-height: 85px;
+color: var(--primary-color);
 }
 
 h2 {
-  color: var(--secondary-color);
-  font-size: 20px;
-  margin: 10px;
-  padding: 2px;
-  font-family: var(--primary-font);
-}
-.about-me{
-  margin: 40px;
+position: absolute;
+width: 506px;
+height: 27px;
+left: calc(50% - 506px/2 - 327px);
+top: 270px;
+
+font-family: var(--primary-font);
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 27px;
+color: #272142;
 }
 
-h3,
-h4 {
-  color: var(--primary-color);
-  font-size: 35px;
-  margin: 10px;
-  padding: 2px;
-  font-family: var(--primary-font);
-}
+
 .story{
-  text-align: justify;
-  line-height: 27px;
-  font-family: var(--primary-font);
-  color: var(--text-color)
+position: absolute;
+width: 475px;
+height: 120px;
+left: calc(50% - 475px/2 - 342.5px);
+top: 350px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 30px;
+color: var(--text-color);
+text-align: justify;
 }
  .my-photo{
   border-radius: 150px;
   margin-left: 50px;
+  position: absolute;
+  left: 711px;
+  top: 180px;
  }
  .details {
   text-align: justify;
