--- a/styles/index.css
+++ b/styles/index.css
@@ -80,7 +80,7 @@ h5{
  color: var(--primary-color);
   font-size: 70px;
   margin: 0 auto;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
   font-family: var(--primary-font);
   
 }
@@ -121,10 +121,10 @@ h5{
 .contacts{
   display: inline;
   text-align: center;
-    
-  }
+  
+}
   .info{
-   font-size: 25px;
+   font-size: 16px;
    font-family: var(--secondary-color);
     margin: 10px 400px;
     padding: 20px;
@@ -144,9 +144,162 @@ h5{
   width: 100%;
  }
  
+  @media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  .about-me {
+    padding: 5px 20px;
+  }
+ .my-photo{
+  width: 250px;
+  margin-left: 10px;
+  
+ }
+  .story {
+    text-align: justify;
+    padding: -200px ;
+    font-size: 15px;
+  }
+  .details{
+    text-align: justify;
+    line-height: 20px;
+    font-family: var(--primary-font);
+    color: var(--text-color);
+    margin-left: 50px;
+  }
+  h4 {
+    font-size: 18px;
+    margin-left: 2px;
+    margin-left: 50px;
+    
+  }
+  .navigation {
+  padding: 15px;
+  
+}
+.contact {
+  margin-left: 20px;
+  padding: var(--btn-pad);
+  background-color: var(--btn-color);
+  color: var(--text-color);
+  font-size: 20px;
+  border-radius: var(--btn-bor-rad);
+}
+}
 
-@media (max-width: 900px)  {
+.content-container h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.content-container h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.content-container {
+  padding: 60px 20px;
+}
+.content {
+  margin: 30px;
+}
+.my-photo {
+  border-radius: 20px;
+}
+.technology {
+  line-height: 21px;
+}
+.content h3 {
+  font-size: 24;
+  font-family: var(--default-font-family);
+  line-height: 1.5;
+}
+.content p {
+  font-size: 14px;
+  margin: 0;
+}
 
+.logo {
+  max-height: 40px;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav {
+  padding: 20px 0;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+footer {
+  margin: 60px 0;
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer .contact-box p {
+  margin: 0;
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 990px)  {
   h1,h5{
     font-size: 30px ;
     margin: 5px;
@@ -162,7 +315,6 @@ h5{
   width:95%;
   height: 95%;
   }
-
 .project-title{
   font-size: 20px;
   margin: 2px;
@@ -170,7 +322,6 @@ h5{
 .certificates{
   margin: 0 auto;
   padding: 2px;
-  
 }
 .cert-img-fluid{
   margin: 20px;
@@ -182,6 +333,5 @@ h5{
 }
 .info{
  margin:50px;
- 
 }
 }
