--- a/styles/index.css
+++ b/styles/index.css
@@ -64,6 +64,7 @@ h4 {
  }
 .navigation {
   padding: 30px;
+  margin: 30px;
 }
 .contact {
   margin-left: 20px;
@@ -76,7 +77,7 @@ h4 {
 a {
   text-decoration: none;
 }
-h5{
+h5,h6{
  color: var(--primary-color);
   font-size: 70px;
   margin: 0 auto;
@@ -121,6 +122,7 @@ h5{
 .contacts{
   display: inline;
   text-align: center;
+  padding: 50px;
   
 }
   .info{
@@ -145,7 +147,10 @@ h5{
  }
  
   @media (max-width: 900px) {
-  h1 {
+    html,body{
+      overflow-x: hidden;
+    }
+  h1,h5,h6 {
     font-size: 44px;
     line-height: 56px;
   }
@@ -179,7 +184,8 @@ h5{
     
   }
   .navigation {
-  padding: 15px;
+  padding: 10px;
+  margin: 10px;
   
 }
 .contact {
@@ -187,7 +193,7 @@ h5{
   padding: var(--btn-pad);
   background-color: var(--btn-color);
   color: var(--text-color);
-  font-size: 20px;
+  font-size: 12px;
   border-radius: var(--btn-bor-rad);
 }
 
@@ -204,8 +210,8 @@ h5{
   margin: 2px;
 }
 .certificates{
-  margin: 0 auto;
-  padding: 2px;
+ padding-left: -30px;
+  margin-bottom: 100px;
 }
 .cert-img-fluid{
   margin: 20px;
@@ -213,9 +219,11 @@ h5{
   height: 100%;
 }
 .contacts{
- margin: 100px;
+ margin: 10px;
+ padding: 10px;
 }
 .info{
- margin:50px;
+ margin:40px;
+ font-size: 12px;
 }
 }
