--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,4 @@
 
-
 :root {
   --primary-color: #3baea0;
   --primary-font: 'Poppins', sans-serif;
@@ -12,112 +11,74 @@
   --btn-bor-rad: 5px;
 }
 
-.main-container {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  padding: 50px;
-  font-weight: 700;
-    font-size: 64px;
-    line-height: 85px;
-    color: var(--primary-color);
-}
-
-h1
- {
-  position: absolute;
-width: 515px;
-height: 255px;
-left: calc(50% - 515px/2 - 318.5px);
-top: 259px;
-}
-
-h2 {
-  color: var(--secondary-color);
-  font-size: 20px;
-  margin: 10px;
-  padding: 2px;
-  font-family: var(--primary-font);
-}
-
-h1 {
+h1{
 position: absolute;
-width: 515px;
+width: 700px;
 height: 255px;
 left: calc(50% - 515px/2 - 318.5px);
-top: 200px;
-font-weight: 700;
+top: 100px;
+color:var(--primary-color);
+font-family: var(--primary-font);
+font-weight: 100;
 font-size: 64px;
 line-height: 85px;
 }
-h2{
+.contacts{
+position: absolute;
+width: 1050px;
+height: 200px;
+left: 140px;
+top: 300px;
+background:#92e2d9;
+border-radius: 10px;
+}
+ h2 {
 position: absolute;
 width: 298px;
 height: 64px;
-
-top: 280px;
-text-align: justify;
+left: 100px;
+top: 20px;
+font-family: var(--primary-font);
+color: var(--secondary-color);
+font-style: normal;
+font-weight: 700;
 font-size: 48px;
 line-height: 64px;
-color: var(--secondary-color);
 }
-.contacts {
+
+.phone{
 position: absolute;
-width: 1160px;
-height: 200px;
-left: 140px;
-top: 445px;
-background: var(--primary-color);
-border-radius: 20px;
-opacity: 50%;
+width: 449px;
+height: 27px;
+left: 450px;
+top: 80px;
+font-family: var(--primary-font);
+font-weight: 400;
+font-size: 28px;
+line-height: 45px;
+color: var(--text-color);
 }
 
-
-
-
-
-  
- 
- 
- 
-
-@media (max-width: 900px)  {
-
-  h1,h5{
-    font-size: 30px ;
-    margin: 5px;
-  }
-  h2{
-    font-size: 15px ;
-  }
- .projects-container{
-  margin: 0 auto;
-  padding: 2px;
- }
-  .projects-img-fluid{
-  width:95%;
-  height: 95%;
-  }
-
-.project-title{
-  font-size: 20px;
-  margin: 2px;
+.icons{
+ margin-top:150px;
+ margin-left: 530px;
 }
-.certificates{
-  margin: 0 auto;
-  padding: 2px;
-  
+
+button{
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 18px 30px;
+position: absolute;
+width: 150px;
+height: 63px;
+left: 979px;
+top: 380px;
+border-radius: 4px;
 }
-.cert-img-fluid{
-  margin: 20px;
-  width:100%;
-  height: 100%;
+a{
+  text-decoration: none;
+  color:var(--text-color);
 }
-.contacts{
- margin: 100px;
-}
-.info{
- margin:50px;
- 
-}
-}
+
