--- a/styles/contact.css
+++ b/styles/contact.css
@@ -89,16 +89,11 @@ a{
 }
 
 footer{
-  background-color: #bceee8;
-  margin-top:520px;
-  height: 50px;
-}
-.source{
  text-align: center;
- margin: 20px;
+ margin-top: 90px;
  font-family: var(--primary-font);
+ color: var(--secondary-color);
 }
-.source a{
+ a{
  color: blue;
 }
-
