--- a/styles/projects.css
+++ b/styles/projects.css
@@ -28,16 +28,16 @@ h1
   font-family: 'Playfair Display';
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
+  font-size: 48px;
   line-height: 85px;
   font-family: var(--primary-font);
 }
 
 h2 {
   color: var(--primary-color);
-  font-size: 64px;
+  font-size: 42px;
   text-align: center;
-  margin-top: 300px;
+  margin-top: 250px;
   margin-bottom: 50px;
   padding: 2px;
   font-family: var(--primary-font);
@@ -49,22 +49,19 @@ height: 560px;
 left: 140px;
 top: 532px;
 }
-
-.t-croissant{
+h3{
   color: var(--primary-color);
-  font-size: 40px;
+  font-size: 35px;
   font-family: var(--primary-font);
   text-align: start;
 }
-
-.t-weather{
+h4{
   color: var(--primary-color);
-  font-size: 40px;
+  font-size: 35px;
   font-family: var(--primary-font);
   margin-left: 70px;
   margin-top: 30px;
 }
-
 .p-croissant {
   line-height: 27px;
   font-family: var(--primary-font);
@@ -74,7 +71,7 @@ top: 532px;
   width: 514px;
   height: 120px;
   left: calc(50% - 514px/2 + 225px);
-  top: 600px;
+  top: 500px;
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
@@ -89,28 +86,23 @@ top: 532px;
   width: 514px;
   height: 120px;
   margin-left: 50px ;
-  top: 1050px;
+  top: 950px;
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
 }
-
-
-
-
-
-  .back-home{
-    text-align: justify;
-    font-size: 20px;
-    font-family: var(--primary-font);
-    text-decoration: underline;
-    margin-bottom: 50px;
-  }
- footer{
-  margin-top: 50px;
-  width: 100%;
- }
  
+ footer{
+  font-family: var(--primary-font);
+  font-size: 15px;
+  color: var(--secondary-color);
+  text-align: center;
+  margin-top: 150px;
+ 
+}
+ a{
+ color: blue;
+}
 
 @media (max-width: 900px)  {
 
