--- a/styles/contact.css
+++ b/styles/contact.css
@@ -19,7 +19,7 @@ width: 600px;
 font-weight: 700;
 font-size: 64px;
 line-height: 85px;
-margin: 100px 144px;
+margin: 80px 144px;
 
 
 }
@@ -87,12 +87,12 @@ a{
   color:var(--text-color);
   font-family: var(--primary-font);
 }
-
-footer{
- text-align: center;
- margin-top: 90px;
- font-family: var(--primary-font);
- color: var(--secondary-color);
+ footer{
+  font-family: var(--primary-font);
+  font-size: 15px;
+  color: var(--secondary-color);
+  text-align: center;
+  margin-top: 550px;
 }
  a{
  color: blue;
