--- a/styles/index.css
+++ b/styles/index.css
@@ -24,7 +24,7 @@ h1{
 }
 h2{
   color: var(--secondary-color);
-  font-size: 20px;
+  font-size: 30px;
   margin: 10px;
   padding: 2px;
   font-family: var(--primary-font);
@@ -35,16 +35,17 @@ h2{
 h3,
 h4 {
   color: var(--primary-color);
-  font-size: 35px;
+  font-size: 30px;
   margin: 10px;
   padding: 2px;
   font-family: var(--primary-font);
 }
 .story{
-  text-align: justify;
-  line-height: 27px;
+  text-align: justofy;
+  line-height: 30px;
   font-family: var(--primary-font);
   color: var(--text-color);
+  font-size: 20px;
 }
  .my-photo{
   border-radius: 150px;
