--- a/styles/contact.css
+++ b/styles/contact.css
@@ -11,6 +11,13 @@
   --btn-bor-rad: 5px;
 }
 
+.main-container{
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  padding: 50px;
+}
+
 h1{
 color:var(--primary-color);
 font-family: var(--primary-font);
