Added @media into contacts.html

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -35,7 +35,6 @@ height: 220px;
 left: 140px;
 top: 300px;
 bottom: 186px;
-background: #F9F7FE;
 border-radius: 20px;
 background:#92e2d9;
 border-radius: 10px;
@@ -102,3 +101,62 @@ a{
  a{
  color: blue;
 }
+
+@media (max-width:990px){
+ h1{
+  width: 280px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 85px;
+  margin-top:10px;
+  margin-left: 20px;
+}
+ .contacts{
+  background:white;
+  width: 150px;
+  height: 120px;
+  margin-left: -120px;
+  margin-top: -60px;
+  font-size: 15px;
+}
+h2 {
+display: none;
+}
+ .phone{
+  width: 200px;
+  margin-top: -150px;
+  margin-left: 20px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 50px;
+}
+i{
+font-size:14px;
+justify-content: center;
+margin: 30px;
+}
+.icons{
+  margin-left: 180px;
+  margin-top: 100px;
+}
+button {
+  align-items: center;
+  height: 30px;
+  width: 100px;
+  margin-left: -860px;
+  margin-top: -70px;
+  color: var(--primary-color);
+}
+.email{
+  font-size: 14px;
+}
+ .source{
+  font-size: 10px;
+  margin-top: 380px;
+  margin-left:-20px;
+}
+}
+  
+
+
+
